--- a/backend/package.json
+++ b/backend/package.json
@@ -1,45 +1,39 @@
 {
-    "name": "probody-backend",
-    "version": "1.0.0",
-    "description": "ProBody AI Fitness App — Backend API",
-    "main": "dist/index.js",
-    "scripts": {
-        "dev": "tsx watch src/index.ts",
-        "build": "tsc --project tsconfig.json",
-        "start": "node dist/index.js",
-        "db:generate": "prisma generate",
-        "db:migrate": "prisma migrate dev",
-        "db:push": "prisma db push",
-        "db:studio": "prisma studio"
-    },
-    "dependencies": {
-        "@ai-sdk/openai": "^0.0.66",
-        "@prisma/client": "^5.22.0",
-        "ai": "^3.4.33",
-        "bcryptjs": "^2.4.3",
-        "compression": "^1.7.4",
-        "cookie-parser": "^1.4.7",
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.7",
-        "express": "^4.19.2",
-        "express-rate-limit": "^7.4.1",
-        "helmet": "^7.1.0",
-        "jsonwebtoken": "^9.0.2",
-        "pino": "^9.5.0",
-        "pino-pretty": "^11.3.0",
-        "stripe": "^16.12.0",
-        "zod": "^3.25.76"
-    },
-    "devDependencies": {
-        "@types/bcryptjs": "^2.4.6",
-        "@types/compression": "^1.7.5",
-        "@types/cookie-parser": "^1.4.8",
-        "@types/cors": "^2.8.17",
-        "@types/express": "^4.17.21",
-        "@types/jsonwebtoken": "^9.0.7",
-        "@types/node": "^20.17.6",
-        "prisma": "^5.22.0",
-        "tsx": "^4.19.1",
-        "typescript": "^5.6.3"
-    }
+  "name": "ai-shape-backend",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "main": "src/server.ts",
+  "scripts": {
+    "dev": "tsx watch src/server.ts",
+    "start": "tsx src/server.ts",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:push": "prisma db push",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.6.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "openai": "^4.83.0",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^22.13.10",
+    "prisma": "^6.6.0",
+    "tsx": "^4.20.5",
+    "typescript": "^5.8.2"
+  }
 }
